cambios en la actualizacion de la tabla de 'maversion' y 'mamodelo'

--- a/src/app/tables/model/model-detail/model-detail.component.html
+++ b/src/app/tables/model/model-detail/model-detail.component.html
@@ -32,7 +32,7 @@
                 <div class="card-body">
                     <form [formGroup]="detail_form">
                         <div class="row">
-                            <div class="col-sm-12 col-md-4">
+                            <!-- <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "TABLES.MODELS.ASSOCIATECODE" | translate }}</label>
                                     <input type="number" formControlName="casociado" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('casociado').errors }">
@@ -40,7 +40,7 @@
                                         <div *ngIf="detail_form.get('casociado').errors.required">{{ "TABLES.MODELS.REQUIREDASSOCIATECODE" | translate }}</div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "TABLES.MODELS.BRAND" | translate }}</label>
