--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -135,6 +135,15 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col-md-8 mb-4 pb-2">
+                    <div class="form-outline form-white">
+                      <label class="form-label required" for="form3Examplea2"> Zona Postal</label>
+                      <input type="text" formControlName="xzona_postal" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xzona_postal').errors }" />
+                      <div *ngIf="submitted && search_form.get('xzona_postal').errors" class="invalid-feedback">
+                        <div *ngIf="search_form.get('xzona_postal').errors.required">Se requiere completar el campo</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -152,18 +161,6 @@
                       </div>
                     </div>
                 </div>
-                  <!-- <div class="col-md-4 mb-4 pb-2">
-                    <div class="form-outline">
-                      <label class="form-label required" for="form3Examplev2">Marca</label>
-                      <select formControlName="cmarca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmarca').errors } " (change)="getModeloData()">
-                        <option></option>
-                        <option *ngFor="let marca of marcaList" value="{{ marca.control }}">{{ marca.value }}</option>
-                      </select>
-                      <div *ngIf="submitted && search_form.get('cmarca').errors" class="invalid-feedback">
-                        <div *ngIf="search_form.get('cmarca').errors.required">Se requiere completar el campo</div>
-                      </div>
-                    </div>
-                  </div> -->
                   <div class="col-sm-12 col-md-4">
                     <div class="form-outline">
                         <label class="form-label" for="form3Examplev5">Marca</label>
@@ -184,22 +181,10 @@
                     </div>
                   </div> 
 
-                  <!-- <div class="col-md-4 mb-4 pb-2">
-                    <div class="form-outline">
-                      <label class="form-label required" for="form3Examplev4">Modelo</label>
-                      <select formControlName="cmodelo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmodelo').errors }" (change)="getVersionData()">
-                        <option></option>
-                        <option *ngFor="let modelo of modeloList" value="{{ modelo.control }}">{{ modelo.value }}</option>
-                      </select>
-                      <div *ngIf="submitted && search_form.get('cmodelo').errors" class="invalid-feedback">
-                        <div *ngIf="search_form.get('cmodelo').errors.required">Se requiere completar el campo</div>
-                      </div>
-                    </div>
-                  </div> -->
                   <div class="col-sm-12 col-md-4">
                     <div class="form-outline">
                         <label class="form-label" for="form3Examplev5">Modelo</label>
-                        <div style="background: fixed">
+                        
                         <ng-autocomplete  [data]="modeloList" [searchKeyword]="keyword" 
                                         placeholder="Seleccionar Modelo" (selected)='getVersionData($event)'
                                         [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
@@ -212,25 +197,14 @@
                         <ng-template #notFoundTemplate let-notFound >
                             <div [innerHTML]="notFound"></div>
                         </ng-template>
-                      </div>
+                      
                     </div>
                   </div> 
-                  <!-- <div class="col-md-4 mb-4 pb-2">
-                    <div class="form-outline form-white">
-                      <label class="form-label required" for="form3Examplea7">Versión</label>
-                      <select formControlName="cversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cversion').errors }"  (change)="searchVersion()">
-                        <option></option>
-                        <option *ngFor="let version of versionList" value="{{ version.control }}">{{ version.value }}</option>
-                      </select>
-                      <div *ngIf="submitted && search_form.get('cversion').errors" class="invalid-feedback">
-                        <div *ngIf="search_form.get('cversion').errors.required">Se requiere completar el campo</div>
-                      </div>
-                    </div>
-                  </div> -->
+
                   <div class="col-sm-12 col-md-4">
                     <div class="form-outline">
                         <label class="form-label" for="form3Examplev5">Version</label>
-                        <div style="background: fixed">
+                        
                         <ng-autocomplete  [data]="versionList" [searchKeyword]="keyword" 
                                         placeholder="Seleccionar Version" (selected)='searchVersion($event)'
                                         [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
@@ -243,12 +217,12 @@
                         <ng-template #notFoundTemplate let-notFound >
                             <div [innerHTML]="notFound"></div>
                         </ng-template>
-                      </div>
+                      
                     </div>
                   </div> 
                   <div class="col-md-4 mb-4 pb-2">
                     <div class="form-outline">
-                      <label class="form-label required">Año del automovil</label>
+                      <label class="form-label required">Año del automovi</label>
                       <input type="number" formControlName="cano" class="form-control form-control-lg"  [ngClass]="{ 'is-invalid' : submitted && search_form.get('cano').errors }" (change)="years()" />
                       <div *ngIf="submitted && search_form.get('cano').errors" class="invalid-feedback">
                         <div *ngIf="search_form.get('cano').errors.required">Se requiere completar el campo</div>
@@ -295,17 +269,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-3 mb-4 pb-2">
-                    <div class="form-outline">
-                      <label class="form-label required" for="form3Examplev5">Tipo de vehículo</label>
-                      <select formControlName="ctarifa_exceso" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ctarifa_exceso').errors }" >
-                      <option *ngFor="let tipo of TypeVehicleList" value="{{ tipo.id }}">{{ tipo.value }}</option>
-                    </select>
-                      <div *ngIf="submitted && search_form.get('ctarifa_exceso').errors" class="invalid-feedback">
-                        <div *ngIf="search_form.get('ctarifa_exceso').errors.required">Se requiere completar el campo</div>
-                      </div>
-                    </div>
-                  </div>
+
                   <div class="col-md-3 mb-4 pb-2">
                     <div class="form-outline">                        
                       <label class="form-label required" for="form3Examplev4">Cobertura</label>
@@ -319,25 +283,18 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-md-3 mb-4 pb-2">
                     <div class="form-outline">
-                        <label class="form-label" for="form3Examplev5">Tomador</label>
-                        <div >
-                        <ng-autocomplete  [data]="takersList" [searchKeyword]="keyword" 
-                                        placeholder="Seleccionar Tomador" (selected)='selectedTaker($event)'
-                                        [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
-                        </ng-autocomplete>
-                    
-                        <ng-template #itemTemplate let-item >
-                            <a [innerHTML]="item.value"></a>
-                        </ng-template>
-                    
-                        <ng-template #notFoundTemplate let-notFound  >
-                            <div [innerHTML]="notFound"></div>
-                        </ng-template>
+                      <label class="form-label required" for="form3Examplev5">Tarifa</label>
+                      <select formControlName="ctarifa_exceso" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ctarifa_exceso').errors }" >
+                      <option *ngFor="let tipo of TypeVehicleList" value="{{ tipo.id }}">{{ tipo.value }}</option>
+                    </select>
+                      <div *ngIf="submitted && search_form.get('ctarifa_exceso').errors" class="invalid-feedback">
+                        <div *ngIf="search_form.get('ctarifa_exceso').errors.required">Se requiere completar el campo</div>
                       </div>
                     </div>
                   </div>
+
                   <div class="col-md-3 mb-4 pb-2">
                     <div class="form-outline">                        
                       <label class="form-label required" for="form3Examplev4">Uso</label>
@@ -444,6 +401,25 @@
                         <div *ngIf="search_form.get('bgrua').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDVEHICLEDAMAGE" | translate }}</div>
                     </div>
                 </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                  <div class="form-outline">
+                      <label class="form-label" for="form3Examplev5">Tomador</label>
+                      <div >
+                      <ng-autocomplete  [data]="takersList" [searchKeyword]="keyword" 
+                                      placeholder="Seleccionar Tomador" (selected)='selectedTaker($event)'
+                                      [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
+                      </ng-autocomplete>
+                  
+                      <ng-template #itemTemplate let-item >
+                          <a [innerHTML]="item.value"></a>
+                      </ng-template>
+                  
+                      <ng-template #notFoundTemplate let-notFound  >
+                          <div [innerHTML]="notFound"></div>
+                      </ng-template>
+                    </div>
+                  </div>
                 </div>
                 <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0" *ngIf="grua">
                   <div class="form-outline">
