--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -586,7 +586,7 @@
                   </div>
                   <div class="col-sm-12 mt-2" *ngIf="bpagarubii">
                     <div class="button">
-                        <button id="ubiiboton" (click)="onSubmit(search_form.value)"></button>
+                        <button id="ubiiboton"></button>
                     </div> 
                   </div>
                   <div class="button">
