--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -279,38 +279,24 @@
                     <div class="col-md-3 mb-4 pb-2">
                       <div class="form-outline">                        
                         <label class="form-label required" for="form3Examplev4">Tipo de Vehículo</label>
-                        <select formControlName="xtipo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtipo').errors } ">
-                          <option value="PARTICULAR">PARTICULAR</option>
-                          <option value="RUSTICO">RUSTICO</option>
-                          <option value="COUPE">COUPE</option>
-                          <option value="SEDAN">SEDAN</option>
-                          <option value="PICK-UP">PICK-UP</option>
-                          <option value="CARGA">CARGA</option>
-                          <option value="MOTO">MOTO</option>
-                          <option value="TRANSPORTE URBANO">TRANSPORTE URBANO-</option>
+                        <select formControlName="ctipovehiculo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ctipovehiculo').errors } ">
+                          <option></option>
+                          <option *ngFor="let vehicle of TypeVehicle" value="{{ vehicle.id }}">{{ vehicle.value }}</option>
                         </select>                         
-                        <div *ngIf="submitted && search_form.get('xtipo').errors"  class="invalid-feedback">
-                          <div *ngIf="search_form.get('xtipo').errors.required">Se requiere completar el campo</div>
+                        <div *ngIf="submitted && search_form.get('ctipovehiculo').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('ctipovehiculo').errors.required">Se requiere completar el campo</div>
                         </div>
                       </div>
                     </div>
                     <div class="col-md-3 mb-4 pb-2">
                       <div class="form-outline">                        
                         <label class="form-label required" for="form3Examplev4">Clase</label>
-                        <select formControlName="xclase" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xclase').errors } ">
-                          <option value="AUTOMOVIL">AUTOMOVIL</option>
-                          <option value="BUSETE URBANO">BUSETE URBANO</option>
-                          <option value="CAMION">CAMION</option>
-                          <option value="CHUTO">CHUTO</option>
-                          <option value="MOTOS">MOTOS-</option>
-                          <option value="PANEL">PANEL-</option>
-                          <option value="PICK-UP">PICK-UP</option>
-                          <option value="REMOLQUE">REMOLQUE-</option>
-                          <option value="RUSTICO">RUSTICO</option>
-                          <option value="SEMI-REMOLQUE">SEMI-REMOLQUE</option>
-                        </select>                         
-                        <div *ngIf="submitted && search_form.get('xclase').errors"  class="invalid-feedback">
-                          <div *ngIf="search_form.get('xclase').errors.required">Se requiere completar el campo</div>
+                        <select formControlName="cclase" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cclase').errors } ">
+                          <option></option>
+                          <option *ngFor="let clase of ListClase" value="{{ clase.id }}">{{ clase.value }}</option>
+                        </select>                            
+                        <div *ngIf="submitted && search_form.get('cclase').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('cclase').errors.required">Se requiere completar el campo</div>
                         </div>
                       </div>
                     </div>
